--- a/src/index.html
+++ b/src/index.html
@@ -458,7 +458,22 @@
 
 </div> <!-- container-->
 
-<!-- <script src="javascript/accounts.js"></script> -->
+<script>
+  /*function sortDescending(a, b) {
+      console.log("sort sortDescending");
+      var date1 = $(a).find(".event-story-date-value").text();
+      var date2 = $(b).find(".event-story-date-value").text();
+      return (date1 < date2) ? -1 : (date1 > date2) ? 1 : 0;
+    };
+    */
+    /*
+    function asc_sort(a, b) {
+        console.log("in ASC_SORT");
+        //return ($(b).text().toUpperCase()) < ($(a).text().toUpperCase()) ? 1 : -1;
+    }
+    */
+</script> 
+<!-- <script src="//rubaxa.github.io/Sortable/Sortable.js"></script> -->
 <script src="js/web3.min.js"></script>
 <script src="js/truffle-contract.js"></script> 
 <script src="js/app.js"></script>
